cfn_benchmark/cfn_templates/aws-samples__aws-cloud-wan-blueprints/patterns/4-routing_policies/8-filtering_peered_tgw/cloudformation/workloads.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS Cloud WAN Filtering - Peered TGWs (VPCs & workloads)
Transform: 'AWS::LanguageExtensions'

Parameters:
  CoreNetworkArn:
    Type: String
  CoreNetworkId:
    Type: String
  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"

Mappings:
  vpc1:
    us-east-1:
      CIDR: 10.10.0.0/24
      EndpointSubneta: 10.10.0.0/28
      EndpointSubnetb: 10.10.0.16/28
      PrivateSubneta: 10.10.0.32/28
      PrivateSubnetb: 10.10.0.48/28
      TGWSubneta: 10.10.0.64/28
      TGWSubnetb: 10.10.0.80/28
    eu-west-1:
      CIDR: 10.0.0.0/24
      EndpointSubneta: 10.0.0.0/28
      EndpointSubnetb: 10.0.0.16/28
      PrivateSubneta: 10.0.0.32/28
      PrivateSubnetb: 10.0.0.48/28
      TGWSubneta: 10.0.0.64/28
      TGWSubnetb: 10.0.0.80/28
  vpc2:
    us-east-1:
      CIDR: 10.10.1.0/24
      EndpointSubneta: 10.10.1.0/28
      EndpointSubnetb: 10.10.1.16/28
      PrivateSubneta: 10.10.1.32/28
      PrivateSubnetb: 10.10.1.48/28
      TGWSubneta: 10.10.1.64/28
      TGWSubnetb: 10.10.1.80/28
    eu-west-1:
      CIDR: 10.0.1.0/24
      EndpointSubneta: 10.0.1.0/28
      EndpointSubnetb: 10.0.1.16/28
      PrivateSubneta: 10.0.1.32/28
      PrivateSubnetb: 10.0.1.48/28
      TGWSubneta: 10.0.1.64/28
      TGWSubnetb: 10.0.1.80/28
  Ipv6SubnetIndex:
    Endpoint:
      a: 0
      b: 1
    Private:
      a: 2
      b: 3
    TGW:
      a: 4
      b: 5
  TransitGateway:
    us-east-1:
      ASN: 65500
    eu-west-1:
      ASN: 65501

Resources:
  # ---------- VPC1 ----------
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [vpc1, !Ref 'AWS::Region', CIDR]
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - vpc1
              - !Ref AWS::StackName
              - !Ref AWS::Region

  VPC1Ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref VPC1

  # For::Each iteration: per subnet type (Endpoint, Private, CWAN) and AZ (2 AZs)
  # Resources to create: 6 subnets, 6 route tables, 6 route table associations - obtaining AZ affinity
  'Fn::ForEach::VPC1SubnetTypes':
    - SubnetType
    - [Endpoint, Private, TGW]
    - '${SubnetType}':
      'Fn::ForEach::AZ':
        - AvailabilityZone
        - [a, b]
          # Subnets
        - 'VPC1${SubnetType}Subnet${AvailabilityZone}':
            Type: AWS::EC2::Subnet
            DependsOn: VPC1Ipv6CidrBlock
            Properties:
              VpcId: !Ref VPC1
              AvailabilityZone: !Sub ${AWS::Region}${AvailabilityZone}
              CidrBlock: !FindInMap [vpc1, !Ref 'AWS::Region', 'Fn::Sub': '${SubnetType}Subnet${AvailabilityZone}']
              Ipv6CidrBlock: !Select
                - !FindInMap [Ipv6SubnetIndex, !Ref SubnetType, !Ref AvailabilityZone]
                - !Cidr
                  - !Select [0, !GetAtt VPC1.Ipv6CidrBlocks]
                  - 6
                  - 64
              AssignIpv6AddressOnCreation: true
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub vpc1-subnet-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Tables
          'VPC1${SubnetType}RouteTable${AvailabilityZone}':
            Type: AWS::EC2::RouteTable
            Properties:
              VpcId: !Ref VPC1
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub vpc1-rt-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Table associations
          'VPC1${SubnetType}RouteTableAssociation${AvailabilityZone}':
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
              RouteTableId: !Ref
                'Fn::Sub': 'VPC1${SubnetType}RouteTable${AvailabilityZone}'
              SubnetId: !Ref
                'Fn::Sub': 'VPC1${SubnetType}Subnet${AvailabilityZone}'

  # For::Each iteration: per Availability Zone
  # VPC routes to 0.0.0.0/0 (via TGW)
  # VPC routes to ::/0 (via TGW)
  'Fn::ForEach::DevelopmentVPCRoutes':
    - AvailabilityZone
    - [a, b]
    - 'VPC1DefaultToTGWRoute${AvailabilityZone}':
        DependsOn:
          - VPC1TransitGatewayAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref
            'Fn::Sub': 'VPC1PrivateRouteTable${AvailabilityZone}'
          DestinationCidrBlock: '0.0.0.0/0'
          TransitGatewayId: !Ref TransitGateway
      'VPC2Ipv6DefaultToTGWRoute${AvailabilityZone}':
        DependsOn:
          - VPC1TransitGatewayAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref
            'Fn::Sub': 'VPC1PrivateRouteTable${AvailabilityZone}'
          DestinationIpv6CidrBlock: '::/0'
          TransitGatewayId: !Ref TransitGateway

  # Transit Gateway Attachment
  VPC1TransitGatewayAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !Ref VPC1TGWSubneta
        - !Ref VPC1TGWSubnetb
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - vpc1-tgw-attachment
              - !Ref AWS::StackName
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref VPC1

  # Transit Gateway Route Table association
  VPC1TransitGatewayAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref VPC1TransitGatewayAttachment
      TransitGatewayRouteTableId: !Ref TransitGatewayRouteTable

  # Transit Gateway Route Table propagation
  VPC1TransitGatewayPropagation:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref VPC1TransitGatewayAttachment
      TransitGatewayRouteTableId: !Ref TransitGatewayRouteTable

  # Security Groups (Instances and EC2 Instance Connect endpoint)
  VPC1InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC1 - Instance Security Group
      VpcId: !Ref VPC1

  VPC1InstanceSecurityGroupIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC1InstanceSecurityGroup
      Description: Allowing ICMP traffic
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp: 10.0.0.0/8

  VPC1InstanceSecurityGroupIngressICMPv6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC1InstanceSecurityGroup
      Description: Allowing ICMPv6 traffic
      IpProtocol: icmpv6
      FromPort: -1
      ToPort: -1
      CidrIpv6: ::/0

  VPC1InstanceSecurityGroupIngressEIC:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC1InstanceSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref VPC1EndpointSecurityGroup

  VPC1InstanceSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC1InstanceSecurityGroup
      Description: Allowing egress traffic
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  VPC1InstanceSecurityGroupEgressIPv6:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC1InstanceSecurityGroup
      Description: Allowing egress traffic IPv6
      IpProtocol: -1
      CidrIpv6: ::/0

  VPC1EndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC1 - Endpoints Security Group
      VpcId: !Ref VPC1

  VPC1EndpointSecurityGroupEgressEIC:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC1EndpointSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      DestinationSecurityGroupId: !Ref VPC1InstanceSecurityGroup

  # # For::Each iteration: per AZ (2 AZs)
  # # EC2 Instances
  'Fn::ForEach::VPC1Instances':
    - AvailabilityZone
    - [a, b]
    - 'VPC1Instance${AvailabilityZone}':
        Type: AWS::EC2::Instance
        Properties:
          InstanceType: t2.micro
          SecurityGroupIds:
            - !Ref VPC1InstanceSecurityGroup
          SubnetId: !Ref
            'Fn::Sub': 'VPC1PrivateSubnet${AvailabilityZone}'
          ImageId: !Ref LatestAmiId
          Tags:
            - Key: Name
              Value: !Join
                - '-'
                - - !Sub vpc1-instance-${AvailabilityZone}
                  - !Ref AWS::StackName

  # EC2 Instance Connect Endpoint
  VPC1EICEndpoint:
    Type: AWS::EC2::InstanceConnectEndpoint
    Properties:
      PreserveClientIp: false
      SecurityGroupIds:
        - !Ref VPC1EndpointSecurityGroup
      SubnetId: !Ref VPC1EndpointSubneta
      Tags:
        - Key: Name
          Value : !Join
            - '-'
            - - !Sub vpc1-eic
              - !Ref AWS::StackName

  # ---------- DEVELOPMENT VPC ----------
  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [vpc2, !Ref 'AWS::Region', CIDR]
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - vpc2
              - !Ref AWS::StackName
              - !Ref AWS::Region

  VPC2Ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref VPC2

  # For::Each iteration: per subnet type (Endpoint, Private, CWAN) and AZ (2 AZs)
  # Resources to create: 6 subnets, 6 route tables, 6 route table associations - obtaining AZ affinity
  'Fn::ForEach::VPC2SubnetTypes':
    - SubnetType
    - [Endpoint, Private, TGW]
    - '${SubnetType}':
      'Fn::ForEach::AZ':
        - AvailabilityZone
        - [a, b]
          # Subnets
        - 'VPC2${SubnetType}Subnet${AvailabilityZone}':
            Type: AWS::EC2::Subnet
            DependsOn: VPC2Ipv6CidrBlock
            Properties:
              VpcId: !Ref VPC2
              AvailabilityZone: !Sub ${AWS::Region}${AvailabilityZone}
              CidrBlock: !FindInMap [vpc2, !Ref 'AWS::Region', 'Fn::Sub': '${SubnetType}Subnet${AvailabilityZone}']
              Ipv6CidrBlock: !Select
                - !FindInMap [Ipv6SubnetIndex, !Ref SubnetType, !Ref AvailabilityZone]
                - !Cidr
                  - !Select [0, !GetAtt VPC2.Ipv6CidrBlocks]
                  - 6
                  - 64
              AssignIpv6AddressOnCreation: true
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub vpc2-subnet-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Tables
          'VPC2${SubnetType}RouteTable${AvailabilityZone}':
            Type: AWS::EC2::RouteTable
            Properties:
              VpcId: !Ref VPC2
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub vpc2-rt-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Table associations
          'VPC2${SubnetType}RouteTableAssociation${AvailabilityZone}':
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
              RouteTableId: !Ref
                'Fn::Sub': 'VPC2${SubnetType}RouteTable${AvailabilityZone}'
              SubnetId: !Ref
                'Fn::Sub': 'VPC2${SubnetType}Subnet${AvailabilityZone}'

  # For::Each iteration: per Availability Zone
  # VPC routes to 0.0.0.0/0 (via TGW)
  # VPC routes to ::/0 (via TGW)
  'Fn::ForEach::DevelopmentVPCRoutes':
    - AvailabilityZone
    - [a, b]
    - 'VPC2DefaultToTGWRoute${AvailabilityZone}':
        DependsOn:
          - VPC2TransitGatewayAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref
            'Fn::Sub': 'VPC2PrivateRouteTable${AvailabilityZone}'
          DestinationCidrBlock: '0.0.0.0/0'
          TransitGatewayId: !Ref TransitGateway
      'VPC2Ipv6DefaultToTGWRoute${AvailabilityZone}':
        DependsOn:
          - VPC2TransitGatewayAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref
            'Fn::Sub': 'VPC2PrivateRouteTable${AvailabilityZone}'
          DestinationIpv6CidrBlock: '::/0'
          TransitGatewayId: !Ref TransitGateway

  # Transit Gateway Attachment
  VPC2TransitGatewayAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !Ref VPC2TGWSubneta
        - !Ref VPC2TGWSubnetb
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - vpc2-tgw-attachment
              - !Ref AWS::StackName
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref VPC2

  # Transit Gateway Route Table association
  VPC2TransitGatewayAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties:
      TransitGatewayAttachmentId: !Ref VPC2TransitGatewayAttachment
      TransitGatewayRouteTableId: !Ref TransitGatewayRouteTable

  # Transit Gateway Route Table propagation
  VPC2TransitGatewayPropagation:
    Type: AWS::EC2::TransitGatewayRouteTablePropagation
    Properties:
      TransitGatewayAttachmentId: !Ref VPC2TransitGatewayAttachment
      TransitGatewayRouteTableId: !Ref TransitGatewayRouteTable

  # Security Groups (Instances and EC2 Instance Connect endpoint)
  VPC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC2 - Instance Security Group
      VpcId: !Ref VPC2

  VPC2InstanceSecurityGroupIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC2InstanceSecurityGroup
      Description: Allowing ICMP traffic
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp: 10.0.0.0/8

  VPC2InstanceSecurityGroupIngressICMPv6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC2InstanceSecurityGroup
      Description: Allowing ICMPv6 traffic
      IpProtocol: icmpv6
      FromPort: -1
      ToPort: -1
      CidrIpv6: ::/0

  VPC2InstanceSecurityGroupIngressEIC:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPC2InstanceSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref VPC2EndpointSecurityGroup

  VPC2InstanceSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC2InstanceSecurityGroup
      Description: Allowing egress traffic
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  VPC2InstanceSecurityGroupEgressIPv6:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC2InstanceSecurityGroup
      Description: Allowing egress traffic IPv6
      IpProtocol: -1
      CidrIpv6: ::/0

  VPC2EndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC2 - Endpoints Security Group
      VpcId: !Ref VPC2

  VPC2EndpointSecurityGroupEgressEIC:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPC2EndpointSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      DestinationSecurityGroupId: !Ref VPC2InstanceSecurityGroup

  # # For::Each iteration: per AZ (2 AZs)
  # # EC2 Instances
  'Fn::ForEach::VPC2Instances':
    - AvailabilityZone
    - [a, b]
    - 'VPC2Instance${AvailabilityZone}':
        Type: AWS::EC2::Instance
        Properties:
          InstanceType: t2.micro
          SecurityGroupIds:
            - !Ref VPC2InstanceSecurityGroup
          SubnetId: !Ref
            'Fn::Sub': 'VPC2PrivateSubnet${AvailabilityZone}'
          ImageId: !Ref LatestAmiId
          Tags:
            - Key: Name
              Value: !Join
                - '-'
                - - !Sub vpc2-instance-${AvailabilityZone}
                  - !Ref AWS::StackName

  # EC2 Instance Connect Endpoint
  VPC2EICEndpoint:
    Type: AWS::EC2::InstanceConnectEndpoint
    Properties:
      PreserveClientIp: false
      SecurityGroupIds:
        - !Ref VPC2EndpointSecurityGroup
      SubnetId: !Ref VPC2EndpointSubneta
      Tags:
        - Key: Name
          Value : !Join
            - '-'
            - - !Sub vpc2-eic
              - !Ref AWS::StackName

  # ---------- TRANSIT GATEWAY ----------
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      AmazonSideAsn: !FindInMap [TransitGateway, !Ref 'AWS::Region', ASN]
      DefaultRouteTableAssociation: disable
      DefaultRouteTablePropagation: disable
      Description: !Join
        - '-'
        - - Transit Gateway
          - !Ref AWS::StackName
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - tgw
              - !Ref 'AWS::Region'
              - !Ref AWS::StackName

  # Route Table
  TransitGatewayRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - tgw-rt
              - !Ref 'AWS::Region'
              - !Ref AWS::StackName

  # Cloud WAN - Transit Gateway peering
  TGWCWANPeering:
    Type: AWS::NetworkManager::TransitGatewayPeering
    Properties:
      CoreNetworkId: !Ref CoreNetworkId
      TransitGatewayArn: !Join
        - ":"
        - - "arn:aws:ec2"
          - !Ref AWS::Region
          - !Ref AWS::AccountId
          - !Join
            - "/"
            - - "transit-gateway"
              - !GetAtt TransitGateway.Id
      Tags:
        - Key: Name
          Value: !Join
            - "-"
            - - "peering"
              - !Ref AWS::Region

  # TGW Policy Table and peering association (Custom Resource)
  TGWPolicyTable:
    Type: Custom::TGWPolicyTable
    DependsOn:
      - TGWCWANPeering
    Properties:
      ServiceToken: !GetAtt TGWPolicyTableFunction.Arn
      TransitGatewayId: !GetAtt TransitGateway.Id
      TGWPeeringAttachmentId: !GetAtt TGWCWANPeering.TransitGatewayPeeringAttachmentId

  # TGW RT Core Network Attachment
  TGWRTAttachment:
    Type: AWS::NetworkManager::TransitGatewayRouteTableAttachment
    DependsOn:
      - TGWPolicyTable
    Properties:
      PeeringId: !Ref TGWCWANPeering
      RoutingPolicyLabel: tgwAttachment
      TransitGatewayRouteTableArn: !Join
        - ":"
        - - "arn:aws:ec2"
          - !Ref AWS::Region
          - !Ref AWS::AccountId
          - !Join
            - "/"
            - - "transit-gateway-route-table"
              - !Ref TransitGatewayRouteTable
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Sub tgw-rt-attachment
              - !Ref AWS::Region

  # ---------- CUSTOM RESOURCE: TGW POLICY TABLE AND PEERING ASSOCIATION ----------
  TGWPolicyTableCustomResourcesRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: AllowTGWNetworkManager
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ec2:CreateTransitGatewayPolicyTable"
                  - "ec2:AssociateTransitGatewayPolicyTable"
                  - "ec2:DisassociateTransitGatewayPolicyTable"
                  - "ec2:DeleteTransitGatewayPolicyTable"
                  - "ec2:DescribeTransitGatewayPolicyTables"
                  - "ec2:DescribeRegions"
                  - "ec2:GetTransitGatewayPolicyTableAssociations"
                  - "ec2:GetTransitGatewayPolicyTableEntries"
                  - "ec2:CreateTags"
                Resource:
                  - "*"
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole

  TGWPolicyTableFunctionLogGroup:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W84
            reason: Encryption not required for this log group
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/${TGWPolicyTableFunction}
      RetentionInDays: 7

  TGWPolicyTableFunction:
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W58
            reason: CWL permissions granted by use of AWSLambdaBasicExecutionRole
          - id: W89
            reason: No requirement for this function to be in a VPC
          - id: W92
            reason: No requirement to limit simultaneous executions
    Type: AWS::Lambda::Function
    Properties:
      Description: Create TGW Policy Table and associate it to Cloud WAN peering
      Runtime: python3.12
      Timeout: 900
      Role: !GetAtt TGWPolicyTableCustomResourcesRole.Arn
      Handler: index.lambda_handler
      Code:
        ZipFile: |-
          import sys
          import subprocess
          from pip._internal import main

          # pip3 install - update boto3 to latest version
          subprocess.call('pip3 install -I -q boto3 -t /tmp/ --no-cache-dir --disable-pip-version-check'.split(), stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)
          sys.path.insert(1, '/tmp/')

          import boto3
          import os
          import logging
          import json
          import time
          import cfnresponse
          from botocore.config import Config
          from botocore.exceptions import ClientError

          log = logging.getLogger("handler")
          log.setLevel(logging.INFO)

          def lambda_handler(event, context):
              try:
                  log.info("Received event: %s", json.dumps(event))
                  log.info(boto3.__version__)

                  # We obtain the parameters from the Custom Resource Event
                  action = event["RequestType"]
                  tgw_id = event["ResourceProperties"]["TransitGatewayId"]
                  tgw_peering_attachment_id = event["ResourceProperties"]["TGWPeeringAttachmentId"]
                  # We obtain the AWS Region
                  region = os.environ['AWS_REGION']

                  # boto3 client configuration
                  ec2 = boto3.client("ec2")

                  response = {}

                  # Actions to perform if we are creating the resources
                  if action == "Create":
                      log.info("Creating transit gateway policy table for transit gateway %s", tgw_id)
                      response = create_tgw_policytable(ec2, tgw_id, tgw_peering_attachment_id, region)

                  if action == "Delete":
                      log.info("Deleting transit gateway policy table for transit gateway %s", tgw_id)
                      response = delete_tgw_policytable(ec2, tgw_id, tgw_peering_attachment_id, region)

                  if action == "Update":
                      log.info("Updating transit gateway policy table for tgw %s", tgw_id)
                      # Getting the previous values of the TGW and Core Network
                      old_tgw_peering_attachment_id = event["OldResourceProperties"]["TGWPeeringAttachmentId"]
                      # Update TGW Policy Table association
                      response = update_tgw_peering_attachment(ec2, tgw_id, old_tgw_peering_attachment_id, tgw_peering_attachment_id, region)

                  if "Return" in response:
                      if response["Return"]:
                          cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
                          return
                      cfnresponse.send(
                          event, context, cfnresponse.FAILED, {}, reason="API request failed"
                      )
                      return

                  cfnresponse.send(event, context, cfnresponse.SUCCESS, response)
                  log.info(response)

              except:
                  log.exception("whoops")
                  cfnresponse.send(
                      event,
                      context,
                      cfnresponse.FAILED,
                      {},
                      reason="Caught exception, check logs",
                  )

          def create_tgw_policytable(ec2, tgw_id, tgw_peering_attachment_id, region):
              try:
                  # Initialization of the response
                  response = {}

                  # Create TGW policy table
                  tgw_policy_table_id = ec2.create_transit_gateway_policy_table(
                      TransitGatewayId=tgw_id,
                      TagSpecifications=[
                          {
                              'ResourceType': 'transit-gateway-policy-table',
                              'Tags': [
                                  {
                                      'Key': 'Name',
                                      'Value': f'tgw-policy-table-{region}'
                                  },
                              ]
                          },
                      ]
                  )['TransitGatewayPolicyTable']['TransitGatewayPolicyTableId']
                  # Adding TGW Policy Table ID in response
                  response['TransitGatewayPolicyTableId'] = tgw_policy_table_id

                  # We associate the Policy Table with the Peering (via the TGW Attachment ID)
                  association_state = ec2.associate_transit_gateway_policy_table(
                      TransitGatewayPolicyTableId=tgw_policy_table_id,
                      TransitGatewayAttachmentId=tgw_peering_attachment_id
                  )['Association']['State']
                  # Waiting for the association to be available
                  while association_state == "associating":
                      time.sleep(5)
                      association_state = ec2.get_transit_gateway_policy_table_associations(TransitGatewayPolicyTableId=tgw_policy_table_id)['Associations'][0]['State']

                  log.info("EVERYTHING CREATED")
                  return response

              except Exception as e:
                  log.exception("whoops")
                  cfnresponse.send(
                      event,
                      context,
                      cfnresponse.FAILED,
                      {},
                      reason="Caught exception, check logs",
                  )

          def delete_tgw_policytable(ec2, tgw_id, tgw_peering_attachment_id, region):
              try:
                  # Initialization of the response
                  response = {}

                  # We get the Transit Gateway Policy Table ID
                  tgw_policy_table_id = ec2.describe_transit_gateway_policy_tables(
                      Filters=[
                          {
                              'Name': 'transit-gateway-id',
                              'Values': [tgw_id]
                          },
                          {
                              'Name': 'state',
                              'Values': ['available']
                          },
                          {
                              'Name': 'tag-key',
                              'Values': ['Name']
                          },
                          {
                              'Name': 'tag-value',
                              'Values': [f'tgw-policy-table-{region}']
                          }
                      ]
                  )['TransitGatewayPolicyTables'][0]['TransitGatewayPolicyTableId']
                  # Adding the TGW Policy Table ID in the response
                  response['TransitGatewayPolicyTableId'] = tgw_policy_table_id

                  # We disassociate the Transit Gateway Policy Table from the Peering
                  disassociation_state = ec2.disassociate_transit_gateway_policy_table(
                      TransitGatewayPolicyTableId=tgw_policy_table_id,
                      TransitGatewayAttachmentId=tgw_peering_attachment_id
                  )['Association']['State']
                  # We wait for the disassociation to finish
                  while disassociation_state == "disassociating":
                      time.sleep(5)
                      disassociation_state = ec2.describe_transit_gateway_policy_tables(
                          TransitGatewayPolicyTableIds = [tgw_policy_table_id]
                      )["TransitGatewayPolicyTables"][0]["State"]

                  # We delete the Transit Gateway Policy Table
                  delete_tgw_policy_table = ec2.delete_transit_gateway_policy_table(TransitGatewayPolicyTableId=tgw_policy_table_id)

                  log.info("EVERYTHING DELETED")
                  return response

              except Exception as e:
                  log.exception("whoops")
                  cfnresponse.send(
                      event,
                      context,
                      cfnresponse.FAILED,
                      {},
                      reason="Caught exception, check logs",
                  )

          def update_tgw_peering_attachment(ec2, tgw_id, old_tgw_peering_attachment_id, tgw_peering_attachment_id, region):
            try:
                # Initialization of the response
                response = {}

                # We get the Transit Gateway Policy Table ID
                tgw_policy_table_id = ec2.describe_transit_gateway_policy_tables(
                    Filters=[
                        {
                            'Name': 'transit-gateway-id',
                            'Values': [tgw_id]
                        },
                        {
                            'Name': 'state',
                            'Values': ['available']
                        },
                        {
                            'Name': 'tag-key',
                            'Values': ['Name']
                        },
                        {
                            'Name': 'tag-value',
                            'Values': [f'tgw-policy-table-{region}']
                        }
                    ]
                )['TransitGatewayPolicyTables'][0]['TransitGatewayPolicyTableId']
                # Adding the TGW Policy Table ID in the response
                response['TransitGatewayPolicyTableId'] = tgw_policy_table_id

                # We dissassociate the Policy Table from the old Transit Gateway Peering Attachment ID
                disassociation_state = ec2.disassociate_transit_gateway_policy_table(
                    TransitGatewayPolicyTableId=tgw_policy_table_id,
                    TransitGatewayAttachmentId=old_tgw_peering_attachment_id
                )['Association']['State']
                # We wait for the disassociation to finish
                while disassociation_state == "disassociating":
                    time.sleep(5)
                    disassociation_state = ec2.describe_transit_gateway_policy_tables(
                        TransitGatewayPolicyTableIds = [tgw_policy_table_id]
                    )["TransitGatewayPolicyTables"][0]["State"]

                # We associate the Policy Table to the new Transit Gateway Peering Attachment ID
                association_state = ec2.associate_transit_gateway_policy_table(
                    TransitGatewayPolicyTableId=tgw_policy_table_id,
                    TransitGatewayAttachmentId=tgw_peering_attachment_id
                )['Association']['State']
                # Waiting for the association to be available
                while association_state == "associating":
                    time.sleep(5)
                    association_state = ec2.get_transit_gateway_policy_table_associations(TransitGatewayPolicyTableId=tgw_policy_table_id)['Associations'][0]['State']

                log.info("EVERYTHING CREATED")
                return response

            except Exception as e:
                log.exception("whoops")
                cfnresponse.send(
                    event,
                    context,
                    cfnresponse.FAILED,
                    {},
                    reason="Caught exception, check logs",
                )
